Fix way too big images

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -8,12 +8,12 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 
-ul {
+ul:not(.u-keep-default) {
 	margin: 0;
 	padding: 0;
 }
 
-li {
+ul:not(.u-keep-default) li {
 	list-style: none;
 }
 
